# SuzuranRendererCross

./: .gitignore  CMakeLists.txt  LICENSE
Scenes/alf/: alf_test.xml
Scenes/bathroom/: bathroom_opengl_area.xml
Scenes/cbox/: cbox.xml  cbox_opengl.xml  cbox_opengl_area.xml
Scenes/cbox_t/: cbox.xml  cbox_opengl_area.xml
Scenes/cbox_t/spherical/: cbox.xml  cbox_opengl_area.xml
Scenes/cornellbox/: cornellbox_opengl_area.xml  preview.xml  scene.xml  scene_mi3.xml
Scenes/cornellbox_t/: scene_mi3.xml  scene_opengl.xml
Scenes/desk-suzuran/: DESK_opengl_area.xml
Scenes/desk-suzuran/meshes/: Desk.mtl  Floor_lamp01_001.mtl  Page_1-2_Plane_003.mtl  Page_13-14_Plane_005.mtl  Page_15-16_Plane_002.mtl  Page_3-4_Plane_003.mtl  Page_5-6_Plane_002.mtl  Page_7-8_Plane_002.mtl  Sol_001_Plane_005.mtl  Sol_001_Plane_006.mtl  Sol_001_Plane_007.mtl  Sol_001_Plane_024.mtl
Scenes/nn_models/: SceneTester.ipynb  TransNetDatasetMaker.ipynb
Scenes/spaceship/: spaceship_opengl_area.xml
Scenes/test/: test.ipynb  test_opengl.xml
shaders/: area_ggx.glsl  area_ggx_geo.glsl  area_ref.glsl  diffuse.glsl  gl_ggx.glsl  glass.glsl  glass_geo.glsl  pp_FXAA.glsl
src/: Camera.h  Light.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneParser.h  Shader.h  cudahelperlib.h  ltc.h  main.cpp  neural_main.cpp  suzuran_py.cpp
